--- a/apps/web/src/theme-ondepagamais/style.css
+++ b/apps/web/src/theme-ondepagamais/style.css
@@ -394,7 +394,7 @@ iframe {
         padding: 0;
     }
     
-    /* Ajuste direto dos elementos da seção Mais Populares */
+    /* Ajuste direto dos elementos das seções */
     .w-full.sm\:w-1\/2.md\:w-1\/3 .relative.h-40 {
         height: 192px !important; /* 12rem = 192px */
     }
